--- a/components/content-page/styles.module.css
+++ b/components/content-page/styles.module.css
@@ -52,3 +52,8 @@
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+.video {
+    width: fit-content;
+    height: 500px;
+}
