--- a/components/music-banner/styles.module.css
+++ b/components/music-banner/styles.module.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     gap: 55px;
-    justify-content: flex-end;
+    justify-content: center;
     height: 100%;
 }
 
