--- a/components/latest-single/styles.module.css
+++ b/components/latest-single/styles.module.css
@@ -19,7 +19,8 @@
 .body {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    gap: 25px;
+    /* justify-content: space-between; */
 }
 
 .container>a {
