--- a/components/play/styles.module.css
+++ b/components/play/styles.module.css
@@ -4,4 +4,15 @@
     left: 0px;
     width: 100%;
     z-index: 2;
+    background-color: white;
+    display: flex;
+    align-items: flex-end;
+    gap: 16px;
+    flex-direction: column;
+    padding: 16px 0px;
+}
+
+.container>svg {
+    cursor: pointer;
+    margin-right: 16px;
 }
