--- a/components/get/styles.module.css
+++ b/components/get/styles.module.css
@@ -67,3 +67,26 @@
     line-height: 30px;
     letter-spacing: 0%;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        padding: 16px;
+    }
+
+    .container>h2 {
+        font-size: 30px;
+    }
+
+    .container>p {
+        font-size: 18px;
+    }
+
+    .single div {
+        width: 12px;
+        height: 12px;
+    }
+
+    .single p {
+        font-size: 13px;
+    }
+}
