--- a/layout/styles.module.css
+++ b/layout/styles.module.css
@@ -3,3 +3,10 @@
     max-width: 1200px;
     margin: 0px auto;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        width: 90%;
+        max-width: 100%;
+    }
+}
