--- a/components/exclusive/styles.module.css
+++ b/components/exclusive/styles.module.css
@@ -48,3 +48,29 @@
     letter-spacing: 0%;
     text-align: center;
 }
+
+@media screen and (max-width : 500px) {
+    .container>h2 {
+        font-size: 32px;
+    }
+
+    .wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .single {
+        height: unset;
+        padding: 24px;
+    }
+
+    .single h3 {
+        text-align: center;
+        font-size: 20px;
+    }
+
+    .single p {
+        font-size: 16px;
+    }
+}
