--- a/components/home-banner/styles.module.css
+++ b/components/home-banner/styles.module.css
@@ -1,5 +1,4 @@
 .container {
-    background-image: url("../../public/images/home-banner.png");
     width: 100%;
     height: 840px;
     display: flex;
@@ -11,7 +10,21 @@
     background-size: cover;
     background-repeat: no-repeat;
     position: relative;
+    background-position: center center;
+    transition: background-image 0.5s ease-in-out;
+    animation: fade 1s ease-in-out;
 }
+
+@keyframes fade {
+    0% {
+        opacity: 0.4;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 
 .overlay {
     position: absolute;
@@ -48,7 +61,7 @@
     letter-spacing: 0%;
 }
 
-.content a {
+.content h3 {
     background-color: #B20077;
     padding: 10.5px 48.5px;
     border-radius: 21px;
@@ -58,6 +71,7 @@
     font-size: 24px;
     line-height: 30px;
     letter-spacing: 0%;
+    cursor: pointer;
 }
 
 .navigation {
@@ -74,6 +88,21 @@
     background-color: #D9D9D9;
 }
 
-.navigation div:first-child {
+.navigation .active {
     background-color: #B20077;
+}
+
+@media screen and (max-width: 500px) {
+    .container {
+        height: 700px;
+    }
+
+    .content {
+        padding: 16px;
+        gap: 32px;
+    }
+
+    .content h2 {
+        font-size: 50px;
+    }
 }
