--- a/components/introduce/styles.module.css
+++ b/components/introduce/styles.module.css
@@ -90,3 +90,42 @@
     line-height: 30px;
     letter-spacing: 0%;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        padding: 40px 24px;
+    }
+
+    /* .top{
+        align-items: unset;
+    } */
+
+    .top h2 {
+        font-size: 32px;
+    }
+
+    .top p {
+        font-size: 15px;
+        line-height: 20px;
+    }
+
+    .wrapper {
+        gap: 20px;
+        flex-direction: column;
+    }
+
+    .wrapper>img {
+        width: 100%;
+        object-fit: cover;
+    }
+
+    .content {
+        width: 100%;
+        padding: 24px;
+    }
+
+    .content div {
+        width: 100%;
+        gap: 24px;
+    }
+}
