--- a/components/achievements/styles.module.css
+++ b/components/achievements/styles.module.css
@@ -23,3 +23,17 @@
     letter-spacing: 0%;
     text-align: center;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        padding: 40px 16px;
+    }
+
+    .container>h2 {
+        font-size: 32px;
+    }
+
+    .container p {
+        font-size: 16px;
+    }
+}
