--- a/components/album-banner/styles.module.css
+++ b/components/album-banner/styles.module.css
@@ -7,3 +7,10 @@
     background-position: top center;
     background-repeat: no-repeat;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        background-position: center center;
+        height: 600px;
+    }
+}
