--- a/components/upcoming/styls.module.css
+++ b/components/upcoming/styls.module.css
@@ -26,3 +26,18 @@
     letter-spacing: 0%;
     text-align: center;
 }
+
+@media screen and (max-width: 500px) {
+    .container {
+        padding: 40px 16px;
+    }
+
+    .container h2 {
+        font-size: 32px;
+    }
+
+    .container p {
+        width: 100%;
+        font-size: 16px;
+    }
+}
